# ACalculatorApp

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: publish.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/a_calculator_app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/bridge/: bridge.html
app/src/main/java/com/example/a_calculator_app/: Comps.kt  MainActivity.kt  Stucts.kt  Utils.kt
app/src/main/java/com/example/a_calculator_app/internal/: MainActivity.kt
app/src/main/java/com/example/a_calculator_app/internal_ui/: MainActivity.kt
app/src/main/java/com/example/a_calculator_app/simple/: MainActivity.kt
app/src/main/java/com/example/a_calculator_app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/a_calculator_app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.sh  index.html  simple.html  simple_calculator.html
rust/src/: lib.rs
